# domain_adaptation_factors

./: .gitignore  README.md  main_analyzer.py  main_plotter.py  pyproject.toml
data/: GPL_BEIR.csv  GPL_LoTTE.csv  InPars_BEIR.csv
shared_json/: source_query_types.json
shared_json/BEIR/: test_query_types.json
shared_json/BEIR/GPL/: generated_queries_source_corpus_overlap_gpl.json  generated_queries_source_queries_overlap_gpl.json  generated_queries_test_corpus_overlap_gpl.json  generated_queries_test_queries_overlap_gpl.json  generated_query_types_gpl.json
shared_json/BEIR/InPars/: generated_queries_source_corpus_overlap.json  generated_queries_source_queries_overlap.json  generated_queries_test_corpus_overlap.json  generated_queries_test_queries_overlap.json  generated_query_types.json
shared_json/LoTTE/: test_query_types.json
shared_json/LoTTE/GPL/: generated_queries_source_corpus_overlap_gpl.json  generated_queries_source_queries_overlap_gpl.json  generated_queries_test_corpus_overlap_gpl.json  generated_queries_test_queries_overlap_gpl.json  generated_query_types_gpl.json
src/: data_loader.py  plotting.py  utils.py
src/analyzers/: analyze_overlap.py  analyze_types.py  overlap_utils.py  type_utils.py
